--- a/files/en-us/learn/server-side/django/django_assessment_blog/index.html
+++ b/files/en-us/learn/server-side/django/django_assessment_blog/index.html
@@ -15,7 +15,7 @@ tags:
 
 <div>{{PreviousMenu("Learn/Server-side/Django/web_application_security", "Learn/Server-side/Django")}}</div>
 
-<p class="summary">In this assessment you'll use the Django knowledge you've picked up in the <a href="/en-US/docs/Learn/Server-side/Django">Django Web Framework (Python)</a> module to create a very basic blog.</p>
+<p>In this assessment you'll use the Django knowledge you've picked up in the <a href="/en-US/docs/Learn/Server-side/Django">Django Web Framework (Python)</a> module to create a very basic blog.</p>
 
 <table class="learn-box standard-table">
  <tbody>
