--- a/files/en-us/learn/server-side/express_nodejs/displaying_data/book_detail_page/index.html
+++ b/files/en-us/learn/server-side/express_nodejs/displaying_data/book_detail_page/index.html
@@ -45,7 +45,7 @@ exports.book_detail = function(req, res, <strong>next</strong>) {
 
 </pre>
 
-<div class="note">
+<div class="notecard note">
 <p><strong>Note:</strong> We don't need to require <em>async</em> and <em>BookInstance</em> in this step, as we already imported those modules when we implemented the home page controller.</p>
 </div>
 
@@ -93,7 +93,7 @@ block content
 
 <p>Almost everything in this template has been demonstrated in previous sections.</p>
 
-<div class="note">
+<div class="notecard note">
 <p><strong>Note:</strong> The list of genres associated with the book is implemented in the template as below. This adds a comma after every genre associated with the book except for the last one.</p>
 
 <pre>  p #[strong Genre:]
