--- a/files/en-us/learn/server-side/express_nodejs/displaying_data/author_detail_page/index.html
+++ b/files/en-us/learn/server-side/express_nodejs/displaying_data/author_detail_page/index.html
@@ -82,7 +82,7 @@ block content
 
 <p><img alt="Author Detail Page - Express Local Library site" src="locallibary_express_author_detail.png" style="border-style: solid; border-width: 1px; display: block; margin: 0px auto;"></p>
 
-<div class="note">
+<div class="notecard note">
 <p><strong>Note:</strong> The appearance of the author <em>lifespan</em> dates is ugly! We'll address that in the final challenge in this article.</p>
 </div>
 
