--- a/files/en-us/learn/server-side/express_nodejs/displaying_data/author_list_page/index.html
+++ b/files/en-us/learn/server-side/express_nodejs/displaying_data/author_list_page/index.html
@@ -48,11 +48,11 @@ block content
     else
       li There are no authors.</pre>
 
-<p>Run the application and open your browser to <a class="external external-icon" href="http://localhost:3000/" rel="noopener">http://localhost:3000/</a>. Then select the <em>All authors</em> link. If everything is set up correctly, the page should look something like the following screenshot.</p>
+<p>Run the application and open your browser to <a href="http://localhost:3000/" rel="noopener">http://localhost:3000/</a>. Then select the <em>All authors</em> link. If everything is set up correctly, the page should look something like the following screenshot.</p>
 
 <p><img alt="Author List Page - Express Local Library site" src="locallibary_express_author_list.png" style="display: block; margin: 0px auto;"></p>
 
-<div class="note">
+<div class="notecard note">
 <p><strong>Note:</strong> The appearance of the author <em>lifespan</em> dates is ugly! You can improve this using the <a href="/en-US/docs/Learn/Server-side/Express_Nodejs/Displaying_data/Date_formatting_using_moment">same approach</a> as we used for the <code>BookInstance</code> list (adding the virtual property for the lifespan to the <code>Author</code> model).<br>
  <br>
  However, as the author may not be dead or may have missing birth/death data, in this case we need to ignore missing dates or references to nonexistent properties. One way to deal with this is to return either a formatted date, or a blank string, depending on whether the property is defined. For example:</p>
