--- a/files/en-us/learn/server-side/express_nodejs/routes/index.html
+++ b/files/en-us/learn/server-side/express_nodejs/routes/index.html
@@ -15,7 +15,7 @@ tags:
 
 <div>{{PreviousMenuNext("Learn/Server-side/Express_Nodejs/mongoose", "Learn/Server-side/Express_Nodejs/Displaying_data", "Learn/Server-side/Express_Nodejs")}}</div>
 
-<p class="summary">In this tutorial we'll set up routes (URL handling code) with "dummy" handler functions for all the resource endpoints that we'll eventually need in the <a href="/en-US/docs/Learn/Server-side/Express_Nodejs/Tutorial_local_library_website">LocalLibrary</a> website. On completion we'll have a modular structure for our route handling code, which we can extend with real handler functions in the following articles. We'll also have a really good understanding of how to create modular routes using Express!</p>
+<p>In this tutorial we'll set up routes (URL handling code) with "dummy" handler functions for all the resource endpoints that we'll eventually need in the <a href="/en-US/docs/Learn/Server-side/Express_Nodejs/Tutorial_local_library_website">LocalLibrary</a> website. On completion we'll have a modular structure for our route handling code, which we can extend with real handler functions in the following articles. We'll also have a really good understanding of how to create modular routes using Express!</p>
 
 <table class="learn-box standard-table">
  <tbody>
@@ -56,7 +56,7 @@ tags:
 
 <p>There are several ways to create routes. For this tutorial we're going to use the <code><a href="https://expressjs.com/en/guide/routing.html#express-router">express.Router</a></code> middleware as it allows us to group the route handlers for a particular part of a site together and access them using a common route-prefix. We'll keep all our library-related routes in a "catalog" module, and, if we add routes for handling user accounts or other functions, we can keep them grouped separately.</p>
 
-<div class="note">
+<div class="notecard note">
 <p><strong>Note:</strong> We discussed Express application routes briefly in our <a href="/en-US/docs/Learn/Server-side/Express_Nodejs/Introduction#creating_route_handlers">Express Introduction &gt; Creating route handlers</a>. Other than providing better support for modularization (as discussed in the first subsection below), using <em>Router</em> is very similar to defining routes directly on the <em>Express application object</em>.</p>
 </div>
 
@@ -87,7 +87,7 @@ module.exports = router;
 
 </pre>
 
-<div class="note">
+<div class="notecard note">
 <p><strong>Note:</strong> Above we are defining our route handler callbacks directly in the router functions. In the LocalLibrary we'll define these callbacks in a separate controller module.</p>
 </div>
 
@@ -110,7 +110,7 @@ app.use('/wiki', wiki);</pre>
 
 <p>The callback takes three arguments (usually named as shown: <code>req</code>, <code>res</code>, <code>next</code>), that will contain the HTTP Request object, HTTP response, and the <em>next</em> function in the middleware chain.</p>
 
-<div class="note">
+<div class="notecard note">
 <p><strong>Note:</strong> Router functions are <a href="/en-US/docs/Learn/Server-side/Express_Nodejs/Introduction#using_middleware">Express middleware</a>, which means that they must either complete (respond to) the request or call the <code>next</code> function in the chain. In the case above we complete the request using <code>send()</code>, so the <code>next</code> argument is not used (and we choose not to specify it).</p>
 
 <p>The  router function above takes a single callback, but you can specify as many callback arguments as you want, or an array of callback functions. Each function is part of the middleware chain, and will be called in the order it is added to the chain (unless a preceding function completes the request).</p>
@@ -149,7 +149,7 @@ app.use('/wiki', wiki);</pre>
   ...
 })</pre>
 
-<div class="note">
+<div class="notecard note">
 <p><strong>Note:</strong> Most of our routes for the LocalLibrary will use strings and not regular expressions. We'll also use route parameters as discussed in the next section.</p>
 </div>
 
@@ -168,7 +168,7 @@ app.use('/wiki', wiki);</pre>
 
 <p>The names of route parameters must be made up of “word characters” (A-Z, a-z, 0-9, and _).</p>
 
-<div class="note">
+<div class="notecard note">
 <p><strong>Note:</strong> The URL <em>/book/create</em> will be matched by a route like <code>/book/:bookId</code> (which will extract a "bookId" value of '<code>create</code>'). The first route that matches an incoming URL will be used, so if you want to process <code>/book/create</code> URLs separately, their route handler must be defined before your <code>/book/:bookId</code> route.</p>
 </div>
 
@@ -191,8 +191,8 @@ app.use('/wiki', wiki);</pre>
 
 <p>By contrast the other URLs are used to act on a specific document/model instance—these encode the identity of the item in the URL (shown as <code><em>&lt;id&gt;</em></code> above). We'll use path parameters to extract the encoded information and pass it to the route handler (and in a later article we'll use this to dynamically determine what information to get from the database). By encoding the information in our URL we only need one route for every resource of a particular type (e.g. one route to handle the display of every single book item).</p>
 
-<div class="note">
-<p><strong>Note</strong>: Express allows you to construct your URLs any way you like — you can encode information in the body of the URL as shown above or use URL <code>GET</code> parameters (e.g. <code>/book/?id=6</code>). Whichever approach you use, the URLs should be kept clean, logical and readable (<a href="https://www.w3.org/Provider/Style/URI">check out the W3C advice here</a>).</p>
+<div class="notecard note">
+<p><strong>Note:</strong> Express allows you to construct your URLs any way you like — you can encode information in the body of the URL as shown above or use URL <code>GET</code> parameters (e.g. <code>/book/?id=6</code>). Whichever approach you use, the URLs should be kept clean, logical and readable (<a href="https://www.w3.org/Provider/Style/URI">check out the W3C advice here</a>).</p>
 </div>
 
 <p>Next we create our route handler callback functions and route code for all the above URLs.</p>
@@ -556,7 +556,7 @@ router.get('/', function(req, res) {
   res.redirect('/catalog');
 });</pre>
 
-<div class="note">
+<div class="notecard note">
 <p><strong>Note:</strong> This is our first use of the <a href="https://expressjs.com/en/4x/api.html#res.redirect">redirect()</a> response method. This redirects to the specified page, by default sending HTTP status code "302 Found". You can change the status code returned if needed, and supply either absolute or relative paths.</p>
 </div>
 
@@ -576,7 +576,7 @@ var usersRouter = require('./routes/users');
 app.use('/users', usersRouter);
 <strong>app.use('/catalog', catalogRouter);  // Add catalog routes to middleware chain.</strong></pre>
 
-<div class="note">
+<div class="notecard note">
 <p><strong>Note:</strong> We have added our catalog module at a path <code>'/catalog'</code>. This is prepended to all of the paths defined in the catalog module. So for example, to access a list of books, the URL will be: <code>/catalog/books/</code>.</p>
 </div>
 
