--- a/files/en-us/learn/server-side/django/introduction/index.html
+++ b/files/en-us/learn/server-side/django/introduction/index.html
@@ -14,8 +14,9 @@ tags:
 
 <div>{{NextMenu("Learn/Server-side/Django/development_environment", "Learn/Server-side/Django")}}</div>
 
-<p>In this first Django article, we answer the question "What is Django?" and give you an overview of what makes this web framework special.
-We'll outline the main features, including some of the advanced functionality that we won't have time to cover in detail in this module. We'll also show you some of the main building blocks of a Django application (although at this point you won't yet have a development environment in which to test it).</p>
+<p>In this first Django article, we answer the question "What is Django?" and give you an overview of what makes this web framework special.</p>
+
+<p>We'll outline the main features, including some of the advanced functionality that we won't have time to cover in detail in this module. We'll also show you some of the main building blocks of a Django application (although at this point you won't yet have a development environment in which to test it).</p>
 
 <table class="learn-box standard-table">
  <tbody>
